<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sekerim</string>

    <string name="education">Education</string>
    <string name="education_catalog">Education Catalog</string>
    <string name="chart">Chart</string>
    <string name="tracking_chart">Tracking Chart</string>
    <string name="monitoreds">Monitoreds</string>
    <string name="monitors">Monitors</string>
    <string name="blocklist">Blocklist</string>
    <string name="next">NEXT</string>
    <string name="end">FINISH</string>
    <string name="insulin_types_and_information">Types and Details of Insulin</string>
    <string name="insulin_application_regions">Insulin Injection Sites</string>
    <string name="insulin_storage_conditions">Insulin Storage Conditions</string>
    <string name="full">Full</string>
    <string name="empty">Empty</string>
    <string name="date">Date</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="hint_enter_result">Measurement</string>
    <string name="morning_empty_measurement">Morning Empty</string>
    <string name="morning_full_measurement">Morning Full</string>
    <string name="afternoon_empty_measurement">Afternoon Empty</string>
    <string name="afternoon_full_measurement">Afternoon Full</string>
    <string name="evening_empty_measurement">Evening Empty</string>
    <string name="evening_full_measurement">Evening Full</string>
    <string name="night_measurement">Night</string>
    <string name="select_date">Select Date</string>
    <string name="back">BACK</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="low_glucose_warning">Follow the steps under Hypoglycemia in the Education Catalogue.</string>
    <string name="high_glucose_warning">Follow the steps in Hyperglycemia in the Education Catalogue.</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="high_glucose_warning_title">"↑High Blood Sugar!"</string>
    <string name="low_glucose_warning_title">"↓Low Blood Sugar!"</string>
    <string name="warning">Attention!</string>
    <string name="okay">Okay</string>
    <string name="add_or_update_measurements">Add or Update Measurements</string>
    <string name="glucose_measurement_instruction">*Measurements on an empty stomach should be done before starting the meal, measurements on a full stomach should be done 2 hours after taking the first bite.</string>
    <string name="catalog_item_swipe_reminder">You can scroll the page with your finger</string>
    <string name="choose_a_day">Choose A Day</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="enter_a_measurement">Enter a Measurement</string>
    <string name="saving">Saving…</string>
    <string name="saved">Saved</string>
    <string name="deleting">Deleting…</string>
    <string name="deleted">Deleted</string>
    <string name="successfully_signed_in">Successfully signed in.</string>
    <string name="sign_in_failed">Sign in failed!</string>
    <string name="successfully_signed_out">Successfully signed out</string>
    <string name="sign_out_failed">Sign out failed!</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="user_info_not_found">User Information Not Found!</string>
    <string name="my_user_icon">My User Icon</string>
    <string name="account">Account</string>
    <string name="user_name">User Name</string>
    <string name="email">E-mail</string>
    <string name="request_a_monitor">Request a monitor</string>
    <string name="my_values">My Values</string>

    <string name="ai">AI</string>
    <string name="diagnose">Diagnose</string>
    <string name="predicted_value">Predicted Value</string>
    <string name="predict">PREDICT</string>
    <string name="blood_glucose">Blood Glucose</string>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>