<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_afternoon_full"
        style="@style/title_style"
        android:background="@drawable/text_frame_gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textView_afternoon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <TextView
        android:id="@+id/textView_evening_empty"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView_evening" />

    <TextView
        android:id="@+id/textView_evening_full"
        style="@style/title_style"
        android:background="@drawable/text_frame_gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/textView_evening" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/textView_date"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_morning"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/morning"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView_date" />

    <TextView
        android:id="@+id/textView_afternoon"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/afternoon"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textView_morning" />

    <TextView
        android:id="@+id/textView_evening"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/evening"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView_afternoon" />

    <TextView
        android:id="@+id/textView_night"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/textView_evening" />

    <TextView
        android:id="@+id/textView_morning_empty"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_morning" />

    <TextView
        android:id="@+id/textView_morning_full"
        style="@style/title_style"
        android:background="@drawable/text_frame_gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textView_morning" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <TextView
        android:id="@+id/textView_afternoon_empty"
        style="@style/title_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_afternoon" />

</androidx.constraintlayout.widget.ConstraintLayout>