<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".features.settings.presenter.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_grey_level_8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_account_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/guideline_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_large"
                android:adjustViewBounds="true"
                android:background="@color/color_white"
                android:contentDescription="@string/my_user_icon"
                android:src="@drawable/ic_person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_grey_level_2" />

            <TextView
                android:id="@+id/textView_displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/color_white"
                android:textSize="@dimen/textSize_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView_user_icon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Corto Maltese" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_account"
            style="@style/constraint_layout_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_account_header">

            <TextView
                android:id="@+id/textView_account"
                style="@style/text_style_settings_header"
                android:text="@string/account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_username_field"
                style="@style/text_style_setting_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_account"
                tools:text="Corto1234" />

            <TextView
                android:id="@+id/textView_username_explanation"
                style="@style/text_style_settings_explanation"
                android:text="@string/user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_username_field" />

            <View
                android:id="@+id/view_seperator_username_email"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_x_medium"
                android:background="@color/color_grey_level_8"
                app:layout_constraintTop_toBottomOf="@id/textView_username_explanation" />

            <TextView
                android:id="@+id/textView_email_field"
                style="@style/text_style_setting_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_seperator_username_email"
                tools:text="corto_maltese@hotmail.com" />

            <TextView
                android:id="@+id/textView_email_explanation"
                style="@style/text_style_settings_explanation"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_email_field" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_monitors"
            style="@style/constraint_layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_account"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView_monitors"
                style="@style/text_style_settings_header"
                android:text="@string/monitors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/margin_xxx_large"
                android:background="@color/color_white"
                android:contentDescription="@string/add_a_monitor"
                android:src="@drawable/ic_person_add"
                app:layout_constraintBottom_toBottomOf="@id/textView_monitors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView_monitors" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_monitors"
                style="@style/recyclerview_users"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_monitors" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_monitoreds"
            style="@style/constraint_layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_monitors"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView_monitoreds"
                style="@style/text_style_settings_header"
                android:text="@string/monitoreds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_monitoreds"
                style="@style/recyclerview_users"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_monitoreds" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_blocklist"
            style="@style/constraint_layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_monitoreds"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView_blocklist"
                style="@style/text_style_settings_header"
                android:text="@string/blocklist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_blocklist"
                style="@style/recyclerview_users"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_blocklist" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>