<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChartMasterFragment">

    <TextView
        android:id="@+id/textView_chart"
        style="@style/main_title"
        android:background="@drawable/header_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:text="@string/chart"
        app:layout_constraintBottom_toBottomOf="@id/imageView_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView_chart"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView_chart"
        android:layout_width="@dimen/mainImage_width"
        android:layout_height="@dimen/mainImage_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:contentDescription="@string/catalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_tracking_chart" />

    <View
        android:id="@+id/separator_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/imageView_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/included_titles"
        android:background="@color/colorGrey"/>

    <include
        android:id="@+id/included_titles"
        layout="@layout/chart_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/recyclerView_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_line"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton_addRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_titles" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_addRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_floatingActionButton"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_chart"
        app:srcCompat="@drawable/ic_addrow"
        android:contentDescription="@string/add_or_update_measurements" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/glucose_measurement_instruction"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton_addRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_chart" />

</androidx.constraintlayout.widget.ConstraintLayout>