<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.ai.AiFragment">

    <ProgressBar
        android:id="@+id/progressBar_entering"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_predicting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_headerGlucose"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/blood_glucose"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber_glucose1"
        app:layout_constraintStart_toStartOf="@id/editTextNumber_glucose1"
        app:layout_constraintTop_toBottomOf="@id/progressBar_entering" />


    <TextView
        android:id="@+id/textView_headerNumber1"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="1-"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber_glucose1"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber_glucose1"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_glucose1" />

    <TextView
        android:id="@+id/textView_headerNumber2"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2-"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber_glucose2"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber_glucose2"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_glucose2" />

    <TextView
        android:id="@+id/textView_headerNumber3"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3-"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber_glucose3"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber_glucose3"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_glucose3" />

    <TextView
        android:id="@+id/textView_headerNumber4"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4-"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber_glucose4"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber_glucose4"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_glucose4" />

    <TextView
        android:id="@+id/textView_headerNumber5"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5-"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber_glucose5"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber_glucose5"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_glucose5" />

    <TextView
        android:id="@+id/textView_headerNumber6"
        style="@style/ai_header_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6-"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber_glucose6"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber_glucose6"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber_glucose6" />

    <EditText
        android:id="@+id/editTextNumber_glucose1"
        style="@style/ai_edit_text_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_headerGlucose" />

    <EditText
        android:id="@+id/editTextNumber_glucose2"
        style="@style/ai_edit_text_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber_glucose1"
        app:layout_constraintStart_toStartOf="@id/editTextNumber_glucose1"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber_glucose1" />

    <EditText
        android:id="@+id/editTextNumber_glucose3"
        style="@style/ai_edit_text_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber_glucose2"
        app:layout_constraintStart_toStartOf="@id/editTextNumber_glucose2"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber_glucose2" />

    <EditText
        android:id="@+id/editTextNumber_glucose4"
        style="@style/ai_edit_text_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber_glucose2"
        app:layout_constraintStart_toStartOf="@id/editTextNumber_glucose2"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber_glucose3"
        tools:text="85" />

    <EditText
        android:id="@+id/editTextNumber_glucose5"
        style="@style/ai_edit_text_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber_glucose3"
        app:layout_constraintStart_toStartOf="@id/editTextNumber_glucose3"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber_glucose4"
        tools:text="70" />

    <EditText
        android:id="@+id/editTextNumber_glucose6"
        style="@style/ai_edit_text_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber_glucose4"
        app:layout_constraintStart_toStartOf="@id/editTextNumber_glucose4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber_glucose5" />


    <Button
        android:id="@+id/button_predict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xx_large"
        android:text="@string/predict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber_glucose6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_predictedResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xx_large"
        android:background="@drawable/text_frame"
        android:padding="@dimen/margin_medium"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_predict"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView_predictedResult_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/predicted_value"
            android:textSize="@dimen/textSize_large"
            app:layout_constraintBottom_toTopOf="@id/textView_predictedResult_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_predictedResult_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textSize="@dimen/textSize_x_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_predictedResult_header"
            tools:text="128" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>